--- a/src/i18n/messages/es_419.json
+++ b/src/i18n/messages/es_419.json
@@ -394,6 +394,7 @@
   "learning.generic.upgradeNotification.pursueAverifiedCertificate": "Obtenga un certificado verificado",
   "learning.generic.upgradeNotification.code": "Usa el código {code} al finalizar la compra",
   "learning.generic.upsell.verifiedCertBullet.verifiedCert": "certificado verificado",
+  "learning.generic.upsell.verifiedCertBullet.cert": "certificado",
   "learning.generic.upsell.verifiedCertBullet": "Obtén un {verifiedCertLink} de finalización para compartirlo en tu currículum",
   "learning.generic.upsell.unlockGradedBullet.gradedAssignments": "tareas calificadas",
   "learning.generic.upsell.unlockGradedBullet": "Desbloquea el acceso a todas las actividades del curso, incluidas las {gradedAssignmentsInBoldText}",
